kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: homelabvpn
  labels:
    app.kubernetes.io/name: homelabvpn
    app.kubernetes.io/component: vpn
